# vaca

./: .gitignore  AUTHORS.txt  BUGS.txt  CMakeLists.txt  CMakeSettings.json  INSTALL.txt  LICENSE.txt  Makefile  Makefile.boost  Makefile.common  Makefile.mgw  Makefile.mingw  Makefile.msc  Makefile.vc  Makefile.vc.gnumake  NEWS.txt  README.md  README.txt  TODO.txt  compile_all_examples_mingw.bat  compile_all_examples_vc.bat  compile_all_libraries_mingw.bat  compile_all_libraries_vc.bat  compile_mingw.bat  compile_vc.bat  stdvaca.h
.github/workflows/: build.yml
VisualC++/: AddressBook.vcproj  AnchorLayouts.vcproj  Anchors.vcproj  AutoCompletion.vcproj  Bixes.vcproj  BouncingBalls.vcproj  BoxLayouts.vcproj  Buttons.vcproj  Calendar.vcproj  ColoredButton.vcproj  ComboBoxes.vcproj  CommandsAlt.vcproj  Curves.vcproj  DataGrids.vcproj  EditableListBox.vcproj  Edits.vcproj  EyeDropper.vcproj  FontMetrics.vcproj  FreeOfLayout.vcproj  Hashing.vcproj  HelloWorld.vcproj  Images.vcproj  Labels.vcproj  Maths.vcproj  MenuResource.vcproj  MiniExplorer.vcproj  PensBrushes.vcproj  Primitives.vcproj  ProgressBars.vcproj  Regions.vcproj  Scribble.vcproj  SimpleWorld.vcproj  Sliders.vcproj  Spinners.vcproj  StdCommands.vcproj  Sudoku.vcproj  SystemImageList.vcproj  Tabs.vcproj  TextBoxes.vcproj  TextEditor.vcproj  (+10 more)
cmake/: FindVaca.cmake
doc/: Doxyfile  Doxyfile.en  Doxyfile_chm  Doxyfile_pri  Makefile  footer.html  header.html  style.css
doc/pages/: TN001.page  TN002.page  TN003.page  TN004.page  TN005.page  TN006.page  TN007.page  TN008.page  TN009.page  TN010.page  TN011.page  TN012.page  TN013.page  TN014.page  Win32.page  api.page  api_changes.h  bind.h  classes.h  constants.h  cvs.page  debug.h  devel.h  exampleCalendar.page  exampleHelloWorld.page  exampleSudoku.page  exampleTextEditor.page  examples.h  functions.h  hacking.h  implementation.page  index.h  index.page  intro.h  license.h  mess.h  (+22 more)
examples/: CMakeLists.txt  Console.h  Example.manifest  Example.rc  resource.h
examples/AnchorLayouts/: AnchorLayouts.cpp  Anchors.cpp
examples/AutoCompletion/: AutoCompletion.cpp
examples/Bixes/: Bixes.cpp  Bixes.rc  resource.h
examples/BouncingBalls/: BouncingBalls.cpp  vector2d.h
examples/BoxLayouts/: BoxLayouts.cpp
examples/Buttons/: Buttons.cpp
examples/Calendar/: Calendar.cpp
examples/ColoredButton/: ColoredButton.cpp
examples/ComboBoxes/: ComboBoxes.cpp
examples/Commands/: Commands.cpp  Commands.rc  resource.h
examples/CommandsAlt/: CommandsAlt.cpp
examples/Curves/: Curves.cpp
examples/DataGrids/: DataGrids.cpp
examples/DialogResource/: DialogResource.cpp  DialogResource.rc  resource.h
examples/EditableListBox/: EditableListBox.cpp
examples/Edits/: Edits.cpp  TextBoxes.cpp
examples/Events/: Events.cpp  convert_to.h
examples/EyeDropper/: EyeDropper.cpp  EyeDropper.rc  resource.h
examples/FontMetrics/: FontMetrics.cpp
examples/FreeOfLayout/: FreeOfLayout.cpp
examples/Full/: Full.cpp
examples/Hashing/: Hashing.cpp  md5.cpp  md5.h  sha1.h
examples/HelloWorld/: HelloWorld.cpp
examples/Images/: Images.cpp  Images.rc  resource.h
examples/Labels/: Labels.cpp
examples/LikeScript/: LikeScript.cpp
examples/Maths/: Maths.cpp
examples/MenuResource/: MenuResource.cpp  MenuResource.rc  resource.h
examples/MiniExplorer/: MiniExplorer.cpp
examples/Minimal/: Minimal.cpp
examples/Order/: Order.cpp
examples/Paths/: Paths.cpp
examples/PensBrushes/: PensBrushes.cpp
examples/Primitives/: Primitives.cpp
examples/ProgressBars/: ProgressBars.cpp
examples/ReBars/: ReBars.cpp  ReBars.rc
examples/Regions/: Regions.cpp
examples/Scribble/: Scribble.cpp
examples/Scrolling/: Scrolling.cpp
examples/SimpleWorld/: SimpleWorld.cpp
examples/Sliders/: Sliders.cpp
examples/Spinners/: Spinners.cpp
examples/SplitBars/: SplitBars.cpp  SplitBars.rc  resource.h
examples/StdCommands/: StdCommands.cpp
examples/Sudoku/: Sudoku.cpp  Sudoku.rc  grid.h  grid.hpp  resource.h  table.h  table.hpp
examples/SystemImageList/: SystemImageList.cpp
examples/Tabs/: Tabs.cpp
examples/TextBoxes/: Edits.cpp
examples/TextEditor/: TextEditor.cpp  TextEditor.rc  resource.h
examples/ThreadKiller/: ThreadKiller.cpp
examples/Threads/: Threads.cpp
examples/TimerThread/: TimerThread.cpp
examples/Timers/: Timers.cpp
examples/ToolBars/: ToolBars.cpp  ToolBars.rc  resource.h
examples/Trees/: Trees.cpp  Trees.rc  resource.h
examples/Undo/: Document.h  Document.hpp  Editor.h  Editor.hpp  Undo.cpp
examples/WebCam/: WebCam.cpp
lib/: tmpfile.txt
src/: Anchor.cpp  AnchorLayout.cpp  Application.cpp  BandedDockArea.cpp  BasicDockArea.cpp  Bix.cpp  BoxConstraint.cpp  BoxLayout.cpp  Brush.cpp  Button.cpp  ButtonBase.cpp  CancelableEvent.cpp  CheckBox.cpp  ChildEvent.cpp  ClientLayout.cpp  Clipboard.cpp  CloseEvent.cpp  Color.cpp  ColorDialog.cpp  ComboBox.cpp  Command.cpp  CommandEvent.cpp  CommonDialog.cpp  Component.cpp  Condition.cpp  ConditionVariable.cpp  Constraint.cpp  ConsumableEvent.cpp  Cursor.cpp  CustomButton.cpp  CustomLabel.cpp  Debug.cpp  Dialog.cpp  DockArea.cpp  DockBar.cpp  DockFrame.cpp  DropFilesEvent.cpp  Edit.cpp  Event.cpp  Exception.cpp  (+76 more)
tests/: CMakeLists.txt  run_all.sh  test_backward.cpp  test_bind.cpp  test_handle.cpp  test_image.cpp  test_menu.cpp  test_pen.cpp  test_point.cpp  test_rect.cpp  test_region.cpp  test_sharedptr.cpp  test_signal.cpp  test_signals.cpp  test_size.cpp  test_smartptr.cpp  test_string.cpp  test_tab.cpp  test_thread.cpp  test_widget.cpp
vaca/: Anchor.cpp  Anchor.h  AnchorLayout.cpp  AnchorLayout.h  Application.cpp  Application.h  BandedDockArea.cpp  BandedDockArea.h  BasicDockArea.cpp  BasicDockArea.h  Bind.h  Bix.cpp  Bix.h  BoxConstraint.cpp  BoxConstraint.h  BoxLayout.cpp  BoxLayout.h  Brush.cpp  Brush.h  Button.cpp  Button.h  ButtonBase.cpp  ButtonBase.h  CancelableEvent.cpp  CancelableEvent.h  CheckBox.cpp  CheckBox.h  ClientLayout.cpp  ClientLayout.h  Clipboard.cpp  Clipboard.h  CloseEvent.cpp  CloseEvent.h  Color.cpp  Color.h  ColorDialog.cpp  ColorDialog.h  ComboBox.cpp  ComboBox.h  Command.cpp  (+200 more)
(+322 files in other folders)
