function(add_example name)
  file(GLOB example_sources ${name}/*.cpp)
  add_executable(${name} WIN32 ${example_sources})

  set_target_properties(${name} PROPERTIES
    COMPILE_FLAGS "${common_flags}")

  target_link_libraries(${name} Vaca)
  target_link_libraries(${name} ${win32_libs})
endfunction(add_example)

add_example(AnchorLayouts)
add_example(AutoCompletion)
add_example(Bixes)
add_example(BouncingBalls)
add_example(BoxLayouts)
add_example(Buttons)
add_example(ColoredButton)
add_example(ComboBoxes)
add_example(Commands)
add_example(DataGrids)
add_example(DialogResource)
add_example(EditableListBox)
add_example(Edits)
add_example(EyeDropper)
add_example(FontMetrics)
add_example(FreeOfLayout)
add_example(Full)
add_example(Hashing)
add_example(HelloWorld)
add_example(Images)
add_example(Labels)
add_example(LikeScript)
add_example(Maths)
add_example(MenuResource)
add_example(MiniExplorer)
add_example(Minimal)
add_example(Paths)
add_example(Primitives)
add_example(ProgressBars)
add_example(ReBars)
add_example(Regions)
add_example(Scribble)
add_example(Scrolling)
add_example(Sliders)
add_example(Spinners)
add_example(SplitBars)
add_example(Sudoku)
add_example(SystemImageList)
add_example(Tabs)
add_example(TextEditor)
add_example(Threads)
add_example(Timers)
add_example(ToolBars)
add_example(Trees)
add_example(Undo)
add_example(WebCam)
